@@ -1366,10 +1366,9 @@ void AddToFunction(FvwmFunction *func, char *action)
   if (isupper(condition))
     condition = tolower(condition);
 
-  if (token[1] != '\0' ||
-      (condition != CF_IMMEDIATE && condition != CF_MOTION &&
-       condition != CF_HOLD && condition != CF_CLICK &&
-       condition != CF_DOUBLE_CLICK))
+  if (condition != CF_IMMEDIATE && condition != CF_MOTION &&
+      condition != CF_HOLD && condition != CF_CLICK &&
+      condition != CF_DOUBLE_CLICK)
   {
     fvwm_msg(
       ERR, "AddToFunction",
